Feature Android Assets

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -19,3 +19,8 @@
 
 android.useAndroidX=true
 android.enableJetifier=true
+
+MYAPP_UPLOAD_STORE_FILE=kiperflix.keystore
+MYAPP_UPLOAD_KEY_ALIAS=kiperflix
+MYAPP_UPLOAD_STORE_PASSWORD=Master1*
+MYAPP_UPLOAD_KEY_PASSWORD=Master1*
